interface for the adding activity

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="old_drink_name_label">Recover deleted drink</string>
     <string name="add_drink_hint">Enter a drink name</string>
     <string name="fizzy_text_label">This drink is fizzy</string>
+    <string name="button_save">Save</string>
 </resources>
