--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="button_delete">Delete</string>
     <string name="pick_drink_name_label">Pick a drink to delete</string>
     <string name="wet_text">Wet the bed</string>
+    <string name="button_toilet">Toilet</string>
 </resources>
